style.css
*,
*::before,
*::after {
  box-sizing: border-box;
}

body {
    font-family: Arial, Helvetica, sans-serif;
}

.container {
    max-width: 50vw;
    margin: auto;
    padding-top: 3em;
}

/** TEXT STYLES **/ 
.heading-xl {
    font-family: Arial, Helvetica, sans-serif;
    font-size: 36px;
    font-weight: bold;
    color: #2A2A2A;
}

h1, p {
    margin-bottom: 7px;
    margin-left: 0;
    margin-right: 0;
    margin-top: 0;
}

p {
    font-family: 'Proxima Nova';
    font-size: 16px;
    font-weight: normal;
    color: #2A2A2A;
}

.italic {
    font-style: italic;
}

/** DISPLAY **/ 
.flex {
    display: flex;
    gap: 1em;
}

.flex-column {
    flex-direction: column;
}

.flex-row {
    flex-direction: row;
}

.align-center {
    align-items: center;
}

/** SPACING **/ 
.my-s {
    margin-top: 1em;
    margin-bottom: 1em;
}

.py-s {
    padding-top: 1em;
    padding-bottom: 1em;
}

.pb-s {
    padding-bottom: 1em;
}

.w-100 {
    width: 100%;
}

.w-50 {
    width: 50vw;
}

.w-30 {
    width: 30vw;
}

/** BORDERS **/
.border-bottom {
    border-bottom: 1px solid #C1C7CD;
}

.border-top {
    border-top: 1px solid #C1C7CD;
}

/** FORM ELEMENTS **/ 
.custom-select {
    min-width: 50px;
    position: relative;
}

.custom-select::before,
.custom-select::after {
  --size: 0.3rem;
  position: absolute;
  content: "";
  right: 1rem;
  pointer-events: none;
}
  
.custom-select::after {
    border-left: var(--size) solid transparent;
    border-right: var(--size) solid transparent;
    border-top: var(--size) solid black;
    top: 49%;
}

select {
    appearance: none;
    /* safari */
    -webkit-appearance: none;
    /* other styles for aesthetics */
    width: 100%;
    font-size: 1rem;
    padding: 0.5em 3em 0.5em 0.50em;
    background-color: #fff;
    border: 1px solid #C1C7CD;
    border-radius: 0.25rem;
    color: #2A2A2A;
    cursor: pointer;
}

/** BUTTON **/ 

.button {
    background-color: #C3D500;
    color: #2A2A2A;
    font-weight: 600;
    border-style: solid;
    border-color: #C3D500;
    border-width: 2px;
    border-radius: 0.5rem;
    padding: 1em 1em;
    cursor: pointer;
    font-size: 1rem;
}

.button:hover {
    background-color: #E0E976;
    border-style: solid;
    border-color: #A9C400;
    border-width: 2px;
}

